Fix overlay alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+html {
+  min-height: 100%;
+}
+
 body {
-  background-color: #343434;
+  background-color: #343434; 
+  position: relative;
+  min-height: 100%;
 }
 
 .App {
