--- a/src/Field.css
+++ b/src/Field.css
@@ -25,13 +25,20 @@
     grid-gap: 1px;
 }
 
-.inactiveOverlay {
+.inactive {    
+    color: white;    
+    background-color: rgba(41, 41, 41, 0.87);
+}
+
+.active {
+
+}
+
+.overlay {
     padding-top: 240px;
-    color: white;
-    position: absolute;
+    position: fixed;
     top: 0px; 
     left: 0px;
     width: 100%;
     height: 100%;
-    background-color: rgba(41, 41, 41, 0.87);
 }
